<resources>
    <string name="app_name">Gojek Clone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_placeholder">Cari layanan, makanan, &amp; tujuan</string>
    <string name="account">Akun</string>
    <string name="dummy_balance">Rp109.048</string>
    <string name="tap_for_history">Tap for history</string>
    <string name="gopay_logo">Gopay Logo</string>
    <string name="pay">Pay</string>
    <string name="top_up">Top Up</string>
    <string name="explore">Explore</string>
    <string name="save_more_today">Save more today 🤑</string>
    <string name="akses_cepat">Akses Cepat</string>
    <string name="harta_karun_bentar_lagi_hilang">Harta Karun bentar lagi hilang</string>
    <string name="remaining_xp">193 XP lagi ada Harta Karun</string>
    <string name="title_promos">Promos</string>
    <string name="title_orders">Orders</string>
    <string name="title_chat">Chat</string>
    <string name="goclub">GoClub</string>
    <string name="product_logo">Product Logo</string>
    <string name="promo_banner">Promo banner</string>
    <string name="product_icon">Product Icon</string>
    <string name="go_to_next_page">Go to next page</string>
</resources>