<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wiryadev.gojekclone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_promos"
        android:name="com.wiryadev.gojekclone.ui.promo.PromosFragment"
        android:label="@string/title_promos"
        tools:layout="@layout/fragment_promos" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.wiryadev.gojekclone.ui.order.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.wiryadev.gojekclone.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>