<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_white_8dp"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="16dp"
        android:contentDescription="@string/gopay_logo"
        android:src="@drawable/ic_gopay_with_text" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_balance"
        android:textSize="14sp" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_for_history"
        android:textColor="@color/green_500"
        android:textSize="11sp" />

</LinearLayout>